# soft-info-code-switch

./: .gitmodules  CLAUDE.md  README.md  pyproject.toml
docs/: doc-adaptive-gap-proxy-methods.md  logical-gap-proxy-methods.md
docs/conversation_logs/: 260107-most-likely-first-method.md  260108-adaptive-gap-proxy-methods.md  260108-weighted-random-gap-proxy.md
docs/conversation_reports/: 260112-coverage-fraction-random-gap-proxy.md  260113-parallel-gap-proxy-computation.md
simulations/: bb_simulation.py  bb_sliding_window_simulation.py  hgp_simulation.py  surface_code_simulation.py  surface_code_sliding_window_simulation.py
simulations/analysis/: bb_conv_max_conf_comparison.ipynb  bb_conv_max_conf_comparison_old.ipynb  plotting_helpers.py
simulations/analysis/data_collectors/: collect_bb_simulation_data.py  collect_hgp_simulation_data.py  collect_surface_code_simulation_data.py
simulations/analysis/notebooks/: bb_code_analysis.ipynb  bb_code_gap_proxy_analysis.ipynb  bb_conv_max_conf_comparison.ipynb  (+7 more)
simulations/utils/: build_circuit.py  simulation_utils.py  simulation_utils_legacy.py
src/css_t/: circuit.py  codes.py  decoders.py  helpers.py  leaf_factored.py  main.py  noise_models.py  optimize_schedule.py  overlapping.py  single_shot.py
src/ldpc_post_selection/: __init__.py  base.py  bplsd_decoder.py  logical_error_distribution.py  matching_decoder.py  stim_tools.py
src/soft_info/: __init__.py  helpers.py
tests/: test_decoder.py  test_logical_error_distribution.py
util/: plot_comparison.py  plot_stim.py  plot_tikz.py  plot_tikz_single_shot.py
(+57 files in other folders)
