[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soft-info"
version = "0.1.1"
description = "Soft-info decoding and post-selection for quantum LDPC and color codes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.11",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scipy>=1.15.3",
    "stim>=1.14.0",
    "pytest",
    "numba",
    'tqdm',
    "seaborn>=0.13.2",
    "python-igraph",
    "pymatching",
    "ldpc>=2.4.0",
    "joblib",
    "galois",
    "sinter",
]

[tool.setuptools]
packages = ["soft_info"]

[tool.setuptools.package-dir]
"soft_info" = "src/soft_info"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

